--- a/range_me_coding_task/tsconfig.json
+++ b/range_me_coding_task/tsconfig.json
@@ -1,26 +1,57 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src"
-  ]
+		"baseUrl": "src",
+		"outDir": "build/dist",
+		"module": "esnext",
+		"target": "es6",
+		"downlevelIteration": true,
+		"lib": [
+			"es6",
+			"dom",
+			"es2017"
+		],
+		"sourceMap": true,
+		"allowJs": true,
+		"jsx": "react-jsx",
+		"moduleResolution": "node",
+		"rootDir": "src",
+		"forceConsistentCasingInFileNames": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noImplicitAny": true,
+		"importHelpers": true,
+		"strictNullChecks": false,
+		"suppressImplicitAnyIndexErrors": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"skipLibCheck": true,
+		"esModuleInterop": false,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+		"strictPropertyInitialization": false,
+		"typeRoots": [
+			"./types",
+			"./node_modules/@types",
+			"./typings.d.ts"
+		],
+		"noFallthroughCasesInSwitch": true
+	},
+	"exclude": [
+		"node_modules",
+		"build",
+		"scripts",
+		"acceptance-tests",
+		"webpack",
+		"jest",
+		"src/setupTests.ts",
+		"types"
+	],
+	"include": [
+		"src"
+	]
 }
