--- a/range_me_coding_task/package.json
+++ b/range_me_coding_task/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.0",
     "history": "^5.2.0",
     "lodash.debounce": "^4.0.8",
     "node-sass": "^7.0.1",
